fix(pile info): correct the z-index of hovered pile

--- a/webapps/client/scripts/pile/styles.less
+++ b/webapps/client/scripts/pile/styles.less
@@ -5,6 +5,10 @@
   }
 }
 
+.task-pile-wrapper {
+  position: relative;
+}
+
 .task-pile {
   margin: (@grid-gutter-width / 2) 0;
   padding: (@grid-gutter-width / 2) 0;
